--- a/src/CellAutomata/Components/Cell/Cell.css
+++ b/src/CellAutomata/Components/Cell/Cell.css
@@ -1,7 +1,7 @@
 .cell {
   width: 12px;
   height: 12px;
-  outline: 1px solid #3bebca;
+  outline: 1px solid #96f7e5; 
   display: inline-block;
   resize: none;
 }
